--- a/src/App.css
+++ b/src/App.css
@@ -70,10 +70,12 @@ body {
 }
 
 .badge {
-  background-color: #ffe599;
   display: inline-block;
   padding: 5px 10px;
+  border: 1.5px solid rgb(243, 188, 86);
   border-radius: 5px;
+  font-size: 0.9em;
+  font-weight: 600;
   margin-bottom: 20px;
 }
 
