--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body {
   color: #333;
 }
 
+.bold {
+  font-weight: 700;
+}
+
 .App {
   text-align: center;
 }
@@ -69,11 +73,17 @@ body {
   position: relative;
 }
 
+.hero-content {
+  width: 70%;
+  margin: 0 auto;
+  text-align: left;
+}
+
 .badge {
   display: inline-block;
-  padding: 5px 10px;
+  padding: 10px 15px;
   border: 1.5px solid rgb(243, 188, 86);
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 0.9em;
   font-weight: 600;
   margin-bottom: 20px;
@@ -83,10 +93,20 @@ body {
   font-size: 2.5em;
   margin: 0.2em 0;
   line-height: 1.2;
+  font-weight: 700;
 }
 
-.hero-section h1 span {
+.hero-section .grey-text {
+  color: grey;
+  display: block;
+}
+
+.hero-section .highlight-text {
   color: #800080;
+  
+}
+.image{
+  height: 20px;
 }
 
 .hero-section p {
@@ -96,27 +116,35 @@ body {
 
 .features {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 20px;
   margin: 20px 0;
 }
 
 .feature-item {
+  display: flex;
+  align-items: center;
   background-color: #ffe599;
   padding: 10px 20px;
   border-radius: 20px;
   font-size: 0.9em;
 }
 
+.feature-item img {
+  margin-right: 10px;
+}
+
 .cta-buttons {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 20px;
   margin-top: 20px;
 }
 
 .enroll-button,
 .know-more-button {
+  display: flex;
+  align-items: center;
   background-color: #800080;
   color: white;
   border: none;
@@ -124,6 +152,11 @@ body {
   border-radius: 20px;
   cursor: pointer;
   font-size: 1em;
+}
+
+.enroll-button img,
+.know-more-button img {
+  margin-right: 10px;
 }
 
 .know-more-button {
