--- a/src/App.css
+++ b/src/App.css
@@ -154,15 +154,20 @@ body {
   font-size: 1em;
 }
 
-.enroll-button img,
-.know-more-button img {
-  margin-right: 10px;
+.enroll-image{
+  height: 20px;
+  margin: 10px 10px;
 }
+ .know-image{
+height: 20px;
+margin: 5px 5px;
+ }
+
 
 .know-more-button {
   background-color: #fff;
   color: #333;
-  border: 2px solid #800080;
+
 }
 
 .stats-section {
