--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,17 +1,25 @@
 .navbar {
-    background-color: #333;
-    padding: 15px 0;
-  }
-  
-  .nav-links {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-  }
-  
-  .nav-links a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1em;
-  }
-  
+  background-color: #333;
+  padding: 15px 0;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.nav-links a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1em;
+}
+
+.nav-links a.selected::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: orange;
+ 
+}
