--- a/src/components/Curriculum/Curriculum.css
+++ b/src/components/Curriculum/Curriculum.css
@@ -80,7 +80,7 @@
 @media only screen and (max-width: 768px) {
   .course-card {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
 
   .course-info {
