--- a/src/components/Certificates/CertificatesAndInternships.css
+++ b/src/components/Certificates/CertificatesAndInternships.css
@@ -1,62 +1,87 @@
 .certificates-internships-container {
     text-align: center;
     padding: 20px;
-}
-
-.main-title {
-    font-size: 40px;
-    font-weight: bold;
+  }
+  
+  .main-title-certificate {
+    font-size: 50px;
+    font-weight: 700;
     color: #333;
-}
-
-.highlight {
+  }
+  
+  .highlight-certificate {
     color: #800080;
-}
-
-.cards {
+  }
+  
+  .highlight-grey {
+    color: #666; /* Grey color */
+  }
+  
+  .cards {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
-}
-
-.card {
-    background-color: #FFF;
+    flex-wrap: wrap; /* Allow wrapping on smaller screens */
+  }
+  
+  .card1, .card2 {
+    background: var(--Eminence-50, rgba(252, 245, 254, 1));
     border: 1px solid #EEE;
     border-radius: 30px;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
-}
-
-.card-title {
-    font-size: 18px;
+    margin-bottom: 20px; /* Add space between cards when stacked vertically */
+  }
+  
+  .card2 {
+    background-color: rgba(255, 244, 197, 1);
+  }
+  
+  .card-title {
+    font-size: 20px;
+    align-items: center;
     font-weight: bold;
     color: #333;
     margin-bottom: 10px;
-}
-
-.card-image {
+  }
+  
+  .card-image {
     width: 100%;
     border-radius: 5px;
     margin-bottom: 10px;
-}
-
-.card-text {
+  }
+  
+  .card-text {
     font-size: 14px;
     color: #666;
-}
-
-.card-footer {
+  }
+  
+  .card-footer {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-}
-
-.footer-item {
+  }
+  
+  .footer-item {
     font-size: 12px;
     color: #666;
     display: flex;
-    align-items: center;
-}
+    justify-content: space-between;
+  }
+  
+  @media (max-width: 768px) {
+    .cards {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .card1, .card2 {
+      width: 100%;
+      max-width: 90%; 
+    }
+  }
+  
