--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -44,21 +44,11 @@
 
 @media only screen and (max-width: 768px) {
   .header-content {
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+   
   }
 
-  .log {
-    margin-left: 0;
-    margin-bottom: 10px;
-  }
 
-  .auth-links .login-button,
-  .auth-links .signup-button {
-    margin: 0;
-  }
 
-  .auth-links .signup-button {
-    margin-top: 10px;
-  }
+  
 }
