--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,5 +21,17 @@
   width: 100%;
   height: 3px;
   background-color: orange;
- 
+}
+
+/* Media query for smaller screens */
+@media only screen and (max-width: 768px) {
+  .nav-links {
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+  }
+
+  .nav-links a {
+    font-size: 0.9em;
+  }
 }
